methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:1: error: Missing closing brace `}' assumed here
def faireFleur(c:Color) {
^FlowerPot:1: error: expected class or object definition
def faireFleur(c:Color) {
^